--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Budget</string>
     <string name="earned">Earned -\u0020</string>
     <string name="projected">Projected -\u0020</string>
+    <string name="income">Income</string>
 </resources>
