3/18/2017 8:28PM edit projected

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="earned">Earned -\u0020</string>
     <string name="projected">Projected -\u0020</string>
     <string name="income">Income</string>
+    <string name="dollarSign">$</string>
 </resources>
