3/19/2017 1:34PM add spending

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="projected">Projected -\u0020</string>
     <string name="income">Income</string>
     <string name="dollarSign">$</string>
+    <string name="spent">Spent -\u0020</string>
+    <string name="date">Date -\u0020</string>
+    <string name="description">Description (optional):</string>
 </resources>
