--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="description">Description (optional):</string>
     <string name="projectedExpenses">Projected Expenses:\u0020</string>
     <string name="totalSpent">Total Spent:</string>
+    <string name="addNewCategoryDialogText">Add New Category:</string>
+    <string name="useExistingCategoryDialogText">Use Existing Category:</string>
+    <string name="editTextHintAddCategoryDialog">Enter New Category Name:</string>
+    <string name="checkBoxAddCategoryDialog">Make Default</string>
+    <string name="addCategoryTitle">Add New Category</string>
+    <string name="spinnerAddCategoryHint">\"Select Category\"</string>
 </resources>
