--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="menu_manage">Manage Categories</string>
     <string name="menu_about">About</string>
     <string name="menu_analyze">Analyze</string>
+    <string name="rename_budget">Rename Budget</string>
 </resources>
