--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="menu_about">About</string>
     <string name="menu_analyze">Analyze</string>
     <string name="rename_budget">Rename Budget</string>
+    <string name="createBudget">Create Budget</string>
 </resources>
